weird gap on some pages yet to fix

--- a/css/main.css
+++ b/css/main.css
@@ -674,7 +674,7 @@ background-color: white;
 }
 #body1 b{
     color:white;
-    background-color: #ffb6c1;
+    background-color: #b6fff4;
 }
 .pink{
     color:#c3a343;
